@@ -92,9 +92,11 @@ selected, then the range of items will be selected.
 Trade agreement
 ```````````````
 
-A small panel is shown with a hotkeys:
-(``Ctrl-A``) for selecting all/none in the currently shown category.
-(``Ctrl-M``) for selecting items with specific base material price.
+A small panel is shown with some useful shortcuts:
+
+* ``Ctrl-A`` for selecting all/none in the currently shown category.
+* ``Ctrl-M`` for selecting items with specific base material price (only
+  enabled for item categories where this matters, like gems and leather).
 
 Display furniture
 `````````````````
